--- a/styles/index.css
+++ b/styles/index.css
@@ -134,7 +134,7 @@
 
 .segmenet {
     min-height: 734px;
-    background-size: 100% 734px;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     padding-left: 40px;
     width: 100%;
@@ -166,9 +166,19 @@ h2 {
     z-index: 2;
 }
 
-.offer-content-segment > img {
+.img-fluid {
     width: 100%;
     height: 100%;
+    position: relative;
+    z-index: -1;
+}
+
+.offer-content-segment-1 {
+    background-image: url(http://via.placeholder.com/200x150);
+    background-position: center;
+    background-size: 100% 100%;
+    min-height: 150px;
+    background: rgb(0, 0, 0, 255);
 }
 
 .about-company {
