--- a/styles/index.css
+++ b/styles/index.css
@@ -7,8 +7,10 @@
 .container-fluid {
     width: 100%;
     background: white;
-    margin: 0 0;
-    padding: 0 0;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
     height: 100%;
 }
 
@@ -20,14 +22,6 @@
 .navbar-default .navbar-nav>.active>a:focus,
 .navbar-default .navbar-nav>.active>a:hover {
     background: none;
-}
-
-@media (min-width: 768px) {
-    .navbar>.container .navbar-brand,
-    .navbar>.container-fluid .navbar-brand {
-        margin-left: -15px;
-        height: 100%;
-    }
 }
 
 .navbar-brand {
@@ -54,8 +48,8 @@
 }
 
 .navbar-right > li > a {
-    font-family: Roboto-Bold, Myriad;
-    text-align: right;
+    font-family: 'Roboto';
+    text-align: center;
     font-size: 11pt;
     color: rgba(0, 0, 0, 255);
     text-decoration: none;
@@ -65,18 +59,6 @@
 
 .navbar .navbar-nav {
     height: 100%;
-}
-
-@media (min-width: 768px) {
-    .navbar .navbar-nav {
-        display: inline-block;
-        float: none;
-        vertical-align: top;
-        height: 100%;
-    }
-    .navbar .navbar-collapse {
-        text-align: center;
-    }
 }
 
 .navbar-right > li > a:hover {
@@ -105,17 +87,45 @@
 }
 
 .languages {
-    margin-left: 25px;
-    margin-top: 20px;
+    padding-top: 20%;
+    padding-right: 20px;
+    height: 100%;
+    width: 100%;
+    text-align: center;
 }
 
 .languages > a {
     text-decoration: none;
     opacity: 0.1;
+    text-align: center;
 }
 
 .languages .active {
     opacity: 1;
+}
+
+@media (min-width: 768px) {
+    .navbar>.container .navbar-brand,
+    .navbar>.container-fluid .navbar-brand {
+        margin-left: -15px;
+        height: 100%;
+    }
+    .navbar .navbar-nav {
+        display: inline-block;
+        float: none;
+        vertical-align: top;
+        height: 100%;
+    }
+    .navbar .navbar-collapse {
+        text-align: center;
+    }
+}
+
+@media (max-width: 768px) {
+    .languages {
+        padding-top: 0;
+        padding-right: 0;
+    }
 }
 
 
@@ -125,81 +135,91 @@
     border-style: solid;
     border-width: medium;
     border-bottom-color: #f5f5f5;
-    margin-left: 1%;
+    margin-left: 2%;
 }
 
 .blue-line {
-    margin-left: 1%;
+    margin-left: 2%;
 }
 
 .segmenet {
     min-height: 734px;
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    padding-left: 40px;
     width: 100%;
+    padding-top: 5%;
 }
 
 h2 {
-    font-family: EncodeSans-Bold, AdobeInvisFont, MyriadPro-Regular;
-    font-size: 17pt;
+    font-family: 'Encode Sans Bold', sans-serif;
+    font-weight: 700;
+    font-size: 20pt;
     color: rgba(255, 255, 255, 255);
     text-align: left;
     margin-bottom: 0;
-    font-weight: bolder;
-    margin-left: 3%;
-    padding-top: 5%;
+    margin-left: 5%;
 }
 
 .offer h2 {
     color: rgba(39, 86, 163, 255);
-    padding-top: 5%;
+    padding-top: 3%;
 }
 
 .offer {
     background-image: url(../images/offer_background.png);
-    padding-top: 90px;
     /*    background-position: center bottom;*/
 }
 
 .offer-content-segment {
-    padding: 2px;
-    z-index: 2;
+    padding: 3px;
+    text-align: center;
 }
 
 .img-fluid {
     width: 100%;
     height: 100%;
-    position: relative;
-    z-index: -1;
+}
+
+.offer-content-segment .title {
+    position: absolute;
+    bottom: 0;
+    width: 98.5%;
+    text-align: center;
+    background-color: rgba(70, 70, 71, 0.8);
+    color: white;
+    font-size: 16pt;
+    margin: 0;
+    padding: 0;
 }
 
 .offer-content-segment-1 {
-    background-image: url(http://via.placeholder.com/200x150);
+    background-color: #dcdcdd;
     background-position: center;
     background-size: 100% 100%;
-    min-height: 150px;
-    background: rgb(0, 0, 0, 255);
+    min-height: 240px;
+    margin: 0;
+    padding: 0;
 }
 
 .about-company {
     background-image: url(../images/about_company_background.png);
+    padding-top: 10%;
     /*     background-position: center top;*/
 }
 
 .about-company-segment {
-    padding-left: 3%;
-    font-family: Roboto-Bold, Roboto-Regular, AdobeInvisFont, MyriadPro-Regular;
-    font-size: 16pt;
+    padding-left: 8%;
+    font-family: Roboto;
+    font-size: 12pt;
     color: rgba(246, 246, 246, 255);
     text-align: left;
     font-family: Roboto;
 }
 
 .about-company-segment .title {
-    font-family: Roboto;
+    font-family: 'Encode Sans Bold', sans-serif;
     font-weight: 700;
-    font-size: 44.98981pt;
+    font-size: 34pt;
     color: #2756a3;
     text-align: left;
 }
@@ -210,7 +230,7 @@ h2 {
 }
 
 .segmenet .row {
-    margin: 5%;
+    margin: 5% 8% 5% 8%;
 }
 
 .menu-content {
@@ -281,6 +301,7 @@ h2 {
     padding: 14px 24px;
     border: 0 none;
     font-weight: 700;
+    font-size: 11pt;
     border-radius: 0;
 }
 
