--- a/styles/index.css
+++ b/styles/index.css
@@ -282,6 +282,15 @@ h2 {
     margin: 5% 8% 5% 8%;
 }
 
+.social-media {
+    display: grid;
+}
+
+.social-media > a {
+    color: #ffffff;
+    margin: 10px;
+}
+
 @media screen and (min-width: 760px) and (max-width: 1080px) {
     .menu-content {
         margin: 1px;
