--- a/styles/index.css
+++ b/styles/index.css
@@ -275,6 +275,7 @@ h2 {
     background: #222222;
     padding-left: 7%;
     padding-top: 2%;
+    padding-bottom: 2%;
     color: #ffffff;
 }
 
@@ -384,4 +385,5 @@ textarea {
 .map {
     margin-left: 3%;
     margin-right: 3%;
+    color: #000000;
 }
